Update code formatting and fix minor bugs

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-# server
-GMAIL_APP_PASS=#########################
+# App
+NODE_ENV=development
+# Use the production URL when deploying to production
+NEXT_PUBLIC_APP_URL=http://agsgroup.mx
 
-# public
-NEXT_PUBLIC_RECAPTCHA_KEY=#########################
+# Google application credentials
+GMAIL_APP_PASS=flebcwzjkvopppmd
+
+# Google reCAPTCHA v2 keys
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6Lf_HFApAAAAAAOX1f56aSsruOxPlISnWh__o-7o
+RECAPTCHA_SECRET_KEY=6Lf_HFApAAAAAIQ1aErjlx94_TtNvgAwkvBhYsHD
