--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-# server
+# App
+NODE_ENV=development
+# Use the production URL when deploying to production
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Google application credentials
 GMAIL_APP_PASS=########################
 
-# public
-NEXT_PUBLIC_RECAPTCHA_KEY=########################
+# Google reCAPTCHA v2 keys
+NEXT_PUBLIC_RECAPTCHA_SITE=########################
+RECAPTCHA_SECRET=########################
